--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,6 +1,14 @@
 - name: Home
   link: /
-- name: About
+- name: About Me
   link: /about.html
-- name: Posts
+- name: Research
+  link: /research.html
+- name: Publications
+  link: /publications.html
+- name: Outreach
+  link: /outreach.html
+- name: Blog
   link: /blog.html
+- name: External Links
+  link: /external.html
